--- a/src/components/landing/Projects.astro
+++ b/src/components/landing/Projects.astro
@@ -2,20 +2,14 @@
 import { projects } from "../../config/projects.json";
 ---
 
+<h2 class="font-bold text-5xl my-8 text-green-600 text-center">ALGUNOS CASOS DE EXITO</h2>
+
 {
   projects.map((project) => (
     <div class="flex flex-col md:flex-row text-center md:text-left mb-2">
       <div class="flex-1 p-4">
-        <h2 class="font-bold text-2xl my-4">Farm Land 1</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, eos.
-          Repellat magnam maiores maxime in voluptate neque, ipsum modi sint
-          recusandae ducimus explicabo. Perspiciatis aut dolor quaerat soluta
-          tempore ullam! Lorem ipsum dolor sit amet consectetur adipisicing
-          elit. Unde corporis eaque soluta commodi doloremque dolores ratione
-          perspiciatis nobis, fugiat quis temporibus officia qui, voluptatibus
-          voluptatem harum? A corporis animi debitis!
-        </p>
+        <h2 class="font-bold text-2xl my-4 text-gray-900">{project.title}</h2>
+        <p class="text-slate-900">{project.description}</p>
         <button>Buy Now</button>
       </div>
       <div class="flex-1">
