--- a/src/components/landing/About.astro
+++ b/src/components/landing/About.astro
@@ -1,9 +1,6 @@
 <section class="bg-zinc-900 p-20 rounded-xl my-4">
-  <h2 class="text-5xl font-bold my-5">About Us</h2>
+  <h2 class="text-5xl font-bold my-5">¿Quiénes somos?</h2>
   <p class="text-zinc-300">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit repudiandae
-    maxime tempora modi culpa provident necessitatibus distinctio, esse libero
-    aliquid magnam cumque earum, totam soluta amet ex reiciendis voluptate!
-    Veniam.
+    Electrónica Celular, S.A. fue fundada en Guatemala en octubre de 1989 con la filosofía de proveer a nuestros socios comerciales verdaderas soluciones en el campo de las telecomunicaciones, electrónica y seguridad electrónica.
   </p>
 </section>
