--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -1,10 +1,12 @@
-<header class="bg-zinc-900 flex flex-col md:flex-row justify-between gap-3 p-20 rounded-xl mt-2 text-center md:text-left">
+<header class="bg-[url('images/6006295.jpg')] bg-[length:2000px_1000px] bg-no-repeat flex flex-col md:flex-row justify-between gap-3 p-20 rounded-xl mt-2 text-center md:text-left">
   <div>
-    <h1 class="text-5xl font-bold">Protect Your Passwords</h1>
+    <h1 class="text-5xl font-bold text-blue-400">Innovación conectada para un futuro Inteligente y transformador</h1>
     <p class="my-4 text-2xl">
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium, ut?
+      Desarrollamos soluciones integrales en tecnología para
+gestionar y optimizar cualquier proceso. Tomaturnos, medidores de agua,
+radiocomunicaciones, Internet de las Cosas (IoT) y más…
     </p>
-    <button class="bg-indigo-500 px-3 py-2 hover:bg-indigo-400">Start Now</button>
+    <button class="bg-blue-800 px-3 py-2 hover:bg-blue-400">CONTACTANOS</button>
   </div>
   <img src="images/fingerprint.svg" class="w-80" />
 </header>
