--- a/src/components/landing/More.astro
+++ b/src/components/landing/More.astro
@@ -1,4 +1,4 @@
-<div class="flex flex-col py-20 md:flex-row md:p-20">
+<div class="flex flex-col py-20 md:flex-row md:p-20 text-black">
   <div class="flex-1 grid grid-cols-2 gap-4 pb-20 md:pb-0">
     <div class="text-center">
       <img src="favicon.svg" class="w-20 m-auto" />
@@ -18,10 +18,9 @@
     </div>
   </div>
   <div class="flex-1 flex flex-col gap-y-10 text-center">
-    <h2 class="font-bold text-5xl">Why should you buy ?</h2>
-    <p class="text-3xl text-zinc-300">
-      Awesome adventure and benefits if you buy this land from us and we promise
-      you will not be disappointed
+    <h2 class="font-bold text-5xl">VERDADERAS SOLUCIONES</h2>
+    <p class="text-3xl text-blue-900">
+      Profesionalismo y experiencia de más de 30 años nos comprometen y nos hace tu verdadera solución.
     </p>
   </div>
 </div>
