--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
-import Footer from "../components/landing/Footer.astro";
+import Footer from "../components/Footer.astro";
+import Header from "../components/Header.astro";
 import "../styles/Layout.css";
 
 export interface Props {
@@ -7,14 +8,24 @@ export interface Props {
 }
 
 const { title } = Astro.props;
+
+/* const links = [
+  { name: 'Home', href: '/' },
+  { name: 'About', href: '/about' },
+  { name: 'Services', href: '/services' },
+  { name: 'Contact', href: '/contact' }
+]; */
 ---
+
+
+
 
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xmlimg" href="/images/logo_ecelular.svg" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
 
@@ -27,7 +38,13 @@ const { title } = Astro.props;
     />
   </head>
   <body>
-    <slot />
+    <!-- Barra de navegación -->
+    <Header />
+    <main class="mx-auto container md:pt-5">
+    
+      <slot />
+    
+    </main>
     <Footer />
   </body>
 </html>
