--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import Projects from "../components/landing/Projects.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Managed Farmland">
+<Layout title="Electrónica Celular - Tomaturnos - Medidores de agua">
   <main>
     <Hero />
     <More />
