--- a/src/styles/Layout.css
+++ b/src/styles/Layout.css
@@ -1,12 +1,17 @@
 body {
-  background: #202020;
-  color: whitesmoke;
+  background: hsl(0, 6%, 97%);
+  color: rgb(252, 250, 250);
   padding: 0;
   margin: 0;
 }
 
+header{
+  /* background:#0b2b8c; */
+  background: black ;
+}
+
 button {
-  background: #6C63FF;
+  background: #6058eb;
   color: whitesmoke;
   border: 3px solid #333333;
   border-radius: 8px;
